--- a/ProjectTemplate/Web.config
+++ b/ProjectTemplate/Web.config
@@ -9,6 +9,16 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  
+  <connectionStrings>
+    <add name="myDB" connectionString="107.180.1.16;&#xD;&#xA;      
+    PORT=3306;&#xD;&#xA;      
+    DATABASE=group4;&#xD;&#xA;      
+    UID=group4;&#xD;&#xA;      
+    PASSWORD=!!Cis440"
+         providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+  
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
