--- a/ProjectTemplate/Web.config
+++ b/ProjectTemplate/Web.config
@@ -11,7 +11,7 @@
   </system.web>
   
   <connectionStrings>
-    <add name="myDB" connectionString="107.180.1.16;&#xD;&#xA;      
+    <add name="myDB" connectionString="SERVER=107.180.1.16;&#xD;&#xA;      
     PORT=3306;&#xD;&#xA;      
     DATABASE=group4;&#xD;&#xA;      
     UID=group4;&#xD;&#xA;      
