--- a/ProjectTemplate/ProjectTemplate.csproj
+++ b/ProjectTemplate/ProjectTemplate.csproj
@@ -95,6 +95,8 @@
     <Content Include="heroImg.jpg" />
     <Content Include="HomePage.html" />
     <Content Include="index.html" />
+    <Content Include="profile.html" />
+    <Content Include="profilestyle.css" />
     <Content Include="ProjectServices.asmx" />
     <Content Include="SignUpPage.html" />
     <Content Include="Web.config" />
