--- a/ProjectTemplate/ProjectTemplate.csproj
+++ b/ProjectTemplate/ProjectTemplate.csproj
@@ -102,6 +102,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
